# cheolsu-proxy

./: .cursorrules  .gitignore  CONTRIBUTING.md  CONTRIBUTING_KO.md  Cargo.toml  README.md  install_cer.sh  package-lock.json
.github/workflows/: rust-lint.yml
docs/: README.md
docs/features/: TLS_1_0_1_1_SUPPORT.md
proxy_v2_models/: Cargo.toml
proxy_v2_models/src/: data_type.rs  lib.rs
proxyapi/: Cargo.toml
proxyapi/src/: lib.rs  proxy_handler.rs
proxyapi/src/ca/: mod.rs
proxyapi/src/proxy/: internal.rs  mod.rs
proxyapi_v2/: Cargo.toml  RUSTLS_IMPROVEMENTS.md
proxyapi_v2/benches/: certificate_authorities.rs  decoder.rs  proxy.rs
proxyapi_v2/examples/: auto_proxy_test.rs  hybrid_tls_proxy.rs  improved_rustls_proxy.rs  log.rs  noop.rs  openssl.rs  tls10_client_test.rs  tls10_test.rs  tls_hybrid_test.rs
proxyapi_v2/src/: decoder.rs  hybrid_tls_handler.rs  lib.rs  openssl_tls_handler.rs  tls_upgrade_handler.rs  tls_version_detector.rs
proxyapi_v2/src/certificate_authority/: mod.rs  openssl_authority.rs  rcgen_authority.rs  rcgen_authority.rs.backup
proxyapi_v2/src/proxy/: builder.rs  internal.rs
proxyapi_v2/tests/: integration_error_handling_tests.rs  logging_handler_error_tests.rs  rcgen_ca.rs  websocket.rs
proxyapi_v2/tests/common/: mod.rs
tauri-ui/: .prettierrc.json  components.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  rspack.config.ts  styles.css  tailwind.config.js  tsconfig.json
tauri-ui/.zed/: settings.json
tauri-ui/src/: api.ts  main.css  main.tsx  types.ts
tauri-ui/src-tauri/: Cargo.toml  tauri.conf.json
tauri-ui/src-tauri/capabilities/: default.json
tauri-ui/src-tauri/src/: lib.rs  main.rs  proxy.rs  proxy_v2.rs
tauri-ui/src/app/: App.tsx
tauri-ui/src/app/providers/: index.ts  router-provider.tsx  use-theme-provider.ts
tauri-ui/src/components/: App.tsx  MultipleSelectInput.tsx  ProxyOff.tsx  ProxyOn.tsx  ProxyV2Control.tsx  TextInput.tsx  TitleBar.tsx  sidebar.tsx
tauri-ui/src/components/request/: RequestDetails.tsx  RequestRow.tsx  RequestTab.tsx  RequestTable.tsx  ResponseTab.tsx  TabView.tsx
tauri-ui/src/entities/: index.ts
tauri-ui/src/entities/proxy/model/: data-type.ts  types.ts
tauri-ui/src/entities/request/: index.ts
tauri-ui/src/entities/session/model/: types.ts
tauri-ui/src/entities/transaction/lib/: utils.ts
tauri-ui/src/features/network-table/: index.ts
tauri-ui/src/features/network-table/model/: index.ts
tauri-ui/src/features/network-table/ui/: request-details.tsx  request-row.tsx  request-tab.tsx  request-table.tsx  response-tab.tsx
tauri-ui/src/hooks/: use-theme-provider.ts
tauri-ui/src/pages/sessions/: index.ts
tauri-ui/src/shared/api/: proxy.ts
tauri-ui/src/shared/app-sidebar/: index.ts
tauri-ui/src/shared/lib/: index.ts
tauri-ui/src/shared/stores/: index.ts  proxy-store.ts  session-store.ts  sidebar-store.ts  types.ts
tauri-ui/src/shared/ui/: badge.tsx  button.tsx  card.tsx  command.tsx  index.ts  input.tsx  layout.tsx  multi-select.tsx  popover.tsx  resizable.tsx  scroll-area.tsx  select.tsx  sidebar.tsx  tabs.tsx  textarea.tsx  virtualized-scroll-area.tsx
tauri-ui/src/stores/: session.ts
(+89 files in other folders)
