[package]
name = "proxy_v2_models"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = { version = "1.4.0", features = ["serde"]}
http-serde = "2.1.1"
http = "1.1.0"
uuid = { version = "1.0", features = ["v4"] }
flate2 = "1.1.2"
