[package]
name = "cheolsu-proxy"
version = "0.1.0"
description = "A Tauri App"
authors = ["ohah", "jinjoo-dev", "wontaezia", "emanuele-em"]
license = "MIT"
repository = "https://github.com/ohah/cheolsu-proxy"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cheolsu_proxy"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-http = "2"
tauri-plugin-devtools = "2"
tokio = { version = "1", features = ["full"] }
proxyapi = {path = "../../proxyapi"}
proxyapi_models = {path = "../../proxyapi_models"}
serde_json = "1.0.142"
tauri-plugin-fs = "2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
